크로니클 큐맵 예제